# cycleSpitter

./: Cargo.toml  LICENSE  README.md  build.sh  dump-to-clipboard.sh
.github/workflows/: release.yml
examples/: example2.s  input.s  template.s
src/: cycles.json  main.rs
src/cycle_spitter/: accumulator.rs  block.rs  cycle_helpers.rs  cycles.rs  format_helpers.rs  helpers.rs  mod.rs  models.rs  regexes.rs  template.rs
src/cycle_spitter/db/: cycles.json
