[package]
name = "cycleSpitter"
description = "A cycle-accurate scanline splitter tool for Atari ST fullscreen programming"
keywords = ["Atari", "Demoscene", "Fullscreen", "Cycle-Accurate", "Border-Removal"]
categories = ["command-line-utilities", "development-tools", "embedded", "parser-implementations"]
authors = ["slippy"]
license = "MIT"
version = "0.2.2"
edition = "2024"
readme = "README.md"
repository = "https://github.com/slippy/cycleSpitter"
documentation = "https://github.com/slippy/cycleSpitter"
homepage = "https://github.com/slippy/cycleSpitter"

[dependencies]
regex = "1.10.6"
serde_json = "1.0.128"
once_cell = "1.19"
clap = { version = "4.5", features = ["derive"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
